--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,33 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200&family=Mulish:wght@200;300;400;500;600;700&display=swap');
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+  
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html{
+   font-size: 62.5%;
+   font-family: 'Montserrat', sans-serif;
+font-family: 'Mulish', sans-serif;
+    
 }
+
+
+
+
+@media (max-width:900px) {
+  
+  html{
+   font-size: 50%;
+  }
+}
+
+@media (max-width:400px) {
+  
+  html{
+   font-size: 45%;
+  }
+}
+
