fixed color matching issue

--- a/src/Components/ThreeBlockBanner/threeblockbanner.scss
+++ b/src/Components/ThreeBlockBanner/threeblockbanner.scss
@@ -4,11 +4,12 @@
     grid-template-rows: 1fr;
     grid-template-columns: repeat(3,1fr);
     height:fit-content;
-    margin: 2rem 2%;
+    padding: 2rem 2%;
+    background-color:#f1f1f1;;
     
     @media (min-width:1200px)
     {
-        margin: 2rem 15%;
+        padding: 2rem 15%;
     }
     @media (max-width:650px)
     {
