--- a/src/Components/FirstSection/firstsection.scss
+++ b/src/Components/FirstSection/firstsection.scss
@@ -6,7 +6,7 @@
     grid-template-rows: 1fr 1fr 1fr 1fr ;
     gap: 1rem;
     padding:2rem 15%;
-
+    background-color: #f1f1f1;;
 
 
     @media (max-width:1300px)
