modified the grid columns and made it responsive and made changes on pause on hover carousal to make it responsive

--- a/src/Components/Carousal/pauseonhover.scss
+++ b/src/Components/Carousal/pauseonhover.scss
@@ -1,11 +1,4 @@
-.hello{
-    height:59rem;
-    width:100%;
-    
-}
-
-.bye{
+.pauseOnHoverContainer{
     display: flex !important;
     justify-content: center;
-    
 }
