--- a/src/Components/FirstSection/firstsection.scss
+++ b/src/Components/FirstSection/firstsection.scss
@@ -4,7 +4,7 @@
     display: grid;
     grid-template-columns: 2fr 1fr 1fr 1fr ;
     grid-template-rows: 1fr 1fr 1fr 1fr ;
-    gap: 1rem;
+    gap: 2rem;
     padding:2rem 15%;
     background-color: #f1f1f1;;
 
@@ -76,7 +76,7 @@
             }
             .price{
                 font-size: 4rem;
-                font-weight: bold;
+                font-weight: 600;
             }
            
             h1{
@@ -116,7 +116,8 @@
          display: flex;
          flex-direction: column;
          justify-content: space-around;
-         height:80%;
+         height:85%;
+         gap:20rem;
          position: relative;
        
             .uppersection{
@@ -169,32 +170,47 @@
         background: url("https://htmlbeans.com/html/schon/images/banner/img07.jpg");
         background-repeat: no-repeat;
         background-size: cover;
-        background-position: bottom right;
+        background-position: center;
+        height: 100%;
+
 
         .textsection{
             display: flex;
             height:80%;
             align-items: flex-end;
             flex-direction:column;
-            padding: 1rem;
-            justify-content: space-between;
+            padding: 1rem 2rem;
+            justify-content: space-around;
             color: grey;
             
             .uppersection{
                 h2{
-                    font-size: 2rem;
+                    font-size: 3rem;
+                    @media (min-width:1000px)
+                    {
+                        font-size: 2rem;
+                    }
                 }
             }
         .price{
-            font-size: 2.5rem;
+            font-size: 3rem;
             color: #573737;
+            text-align: right;
             margin-bottom: 2rem;
+            @media (min-width:1000px)
+                    {
+                        font-size: 2rem;
+                    }
         }
             .shopbutton{
-                font-size: 1.2rem;
+                font-size: 1.5rem;
                 background-color: #2e2d32;
                 color: white;
                 padding: 1rem;
+                @media (min-width:1000px)
+                    {
+                        font-size: 1.2rem;
+                    }
             }
         }
       
@@ -204,18 +220,97 @@
         background: url("https://htmlbeans.com/html/schon/images/banner/img08.jpg");
         background-repeat: no-repeat;
         background-size: cover;
+        background-position: center;
+        padding: 1rem 2rem;
+        .thirdTextSection{
+
+           // padding: 2rem 1rem;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-around;
+            height: 80%;
+            h2{
+                
+                @media (min-width:1000px)
+                {
+                    font-size: 2rem;
+                }
+                font-size: 3rem;
+                color: grey;
+            }
+            .thirdprice{
+                
+                font-size: 3rem;
+                @media (min-width:1000px)
+                {
+                    font-size: 2rem;
+                }
+
+                .hurry{
+                    margin-top: 2rem;
+                }
+            }
+        }
        
+
 
     }
     .fifthpart{
         background-color: #8f9e99;
         grid-column: 1/2;
+        background: url("https://htmlbeans.com/html/schon/images/banner/img12.jpg");
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        .fifthTextSection{
+            text-align: right;
+            padding: 2rem 3rem;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-around;
+            height:80%;
+            letter-spacing: 0.5rem;
+            .shopnow{
+                font-size: 2.5rem;
+                @media (min-width:1000px)
+                {
+                    font-size: 1.5rem;;
+                }
+            }
+            .fifthheading{
+                h2{
+                    font-size: 1.5rem;
+                    
+                    @media (min-width:1000px)
+                    {
+                        font-size: 1.5rem;
+                    }
+                    @media (max-width:600px){
+                        font-size: 2rem;
+                    }
+                }
+                h1{
+                    font-size: 2rem;
+                    font-weight: bold;
+                color: rgb(151, 150, 150);
+                    @media (min-width:1000px)
+                    {
+                        font-size: 2rem;
+                    }
+                    @media (max-width:600px){
+                        font-size: 3rem;
+                    }
+                }
+            }
+           
+        }
      
     }
     .sixthpart{
        
      
        
+    
     grid-column: 2/-1;
     grid-row: 3/-1;
         @media (max-width:1000px)
@@ -231,7 +326,56 @@
         
     }
     .seventhpart{
-       background-color: #c9417a;
+        
+    
+        background: url("https://htmlbeans.com/html/schon/images/banner/img13.jpg");
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: left;
+        
+        .seventhTextSection{
+            text-align: right;
+            padding: 2rem 3rem;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-around;
+            height:85%;
+            gap:8rem;
+            letter-spacing: 0.5rem;
+            .shopnow{
+                font-size: 2.5rem;
+                @media (min-width:1000px)
+                {
+                    font-size: 1.5rem;;
+                }
+            }
+            .seventhheading{
+                h2{
+                    font-size: 1.5rem;
+                    
+                    @media (min-width:1000px)
+                    {
+                        font-size: 1.5rem;
+                    }
+                    @media (max-width:600px){
+                        font-size: 2rem;
+                    }
+                }
+                h1{
+                    font-size: 2rem;
+                    font-weight: bold;
+                color: rgb(151, 150, 150);
+                    @media (min-width:1000px)
+                    {
+                        font-size: 2rem;
+                    }
+                    @media (max-width:600px){
+                        font-size: 3rem;
+                    }
+                }
+            }
+           
+        }
       
        
     }
